# Laptop-Life-Saver

./: .env.example  .gitignore  .pyre_configuration  DEPLOYMENT_GUIDE.md  Maintenance_Guide.md  README.md  SDLC_QA_Validation.md  WALKTHROUGH.md  cloud_ml_runner.py  configure_project.py  convert_icon.py  file_version_info.txt  fix_agent_env.py  implementation_plan.md.resolved  pyproject.toml  requirements.txt  requirements_ml.txt  setup.py  start_agent.bat
.github/workflows/: ml_pipeline.yml
agent/: __init__.py  agent.py  cloud_sync.py  config.py  data_retention.py  hardware_monitor.py  local_buffer.py  notifications.py  setup_wizard.py  tray.py  utils.py
agent/tests/: test_hardware_monitor.py  test_local_buffer.py
backend_ml/: anomaly_detector.py
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js
dashboard/src/: App.jsx  index.css
dashboard/src/components/: AlertRow.jsx  EmptyState.jsx  ErrorBoundary.jsx  HealthTimeline.jsx  Layout.jsx  LoadingSkeleton.jsx  ProtectedRoute.jsx  StatCard.jsx  StatusBadge.jsx  StatusBadge.test.jsx
dashboard/src/contexts/: AuthContext.jsx  ThemeContext.jsx
dashboard/src/hooks/: useAlerts.js  useDevices.js  useNotifications.js  useTelemetry.js  useThresholds.js
dashboard/src/lib/: exportUtils.js  predictiveScore.js  supabase.js
dashboard/src/pages/: Alerts.jsx  Dashboard.jsx  DeviceDetail.jsx  Devices.jsx  Login.jsx  Settings.jsx
prediction_engine/: advanced_analytics.py  anomaly_detector.py  resource_predictor.py
supabase/: force_reset_alerts.sql  schema.sql  update_mac_address.sql
