[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "laptop-life-saver"
version = "1.0.0"
description = "Nyanza District Laptop Health Agent"
dependencies = [
    "psutil",
    "pywin32",
    "WMI",
    "supabase",
    "python-dotenv",
]

[tool.pyright]
include = ["agent"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.13"
reportMissingImports = "error"
extraPaths = ["."]

[tool.pyre]
source_directories = ["."]
search_path = [".venv/Lib/site-packages"]
exclude = ["**/__pycache__", ".venv"]
